--- a/server/pom.xml
+++ b/server/pom.xml
@@ -2,7 +2,7 @@
 
     <parent>
         <groupId>org.pwm-project</groupId>
-        <artifactId>pwm-app</artifactId>
+        <artifactId>pwm-parent</artifactId>
         <version>1.8.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -13,9 +13,7 @@
         <maven>3.2</maven>
     </prerequisites>
 
-    <groupId>org.pwm-project</groupId>
     <artifactId>pwm</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>PWM Password Self Service: Server</name>
@@ -754,6 +752,11 @@
 
         <!-- client webjar dependencies -->
         <!-- changes in client dependencies require updating AppProperty.properties:http.resources.webjarMappings -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>pwm-client</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>dojo</artifactId>
